--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ before_install:
 install: true
 
 script: 
-  - docker run --rm -a -v `pwd`:/root/buildtest hkdaq/triggerapplication:base /bin/sh -c "cd $WCSIMDIR; source ../env-WCSim.sh; git pull; make clean; make rootcint; make; cd /root/buildtest; ln -s /TriggerApplicationPreReq/ToolDAQ/ ToolDAQ; source ./Setup.sh; make clean; make update; make"
+  - docker run --rm -a stdout -a stderr -v `pwd`:/root/buildtest hkdaq/triggerapplication:base /bin/sh -c "cd $WCSIMDIR; source ../env-WCSim.sh; git pull; make clean; make rootcint; make; cd /root/buildtest; ln -s /TriggerApplicationPreReq/ToolDAQ/ ToolDAQ; source ./Setup.sh; make clean; make update; make"
 
 
